notes/styles.css
.notes-info {
    padding: 1rem;
}

.notes-list {
    list-style-type: none;
    display: flex;
    flex-wrap: wrap;
    gap: 1rem
}

.notes-list__item {
    word-break: break-all;
    flex: 1;
    min-width: 16rem;
}

.notes-list__item button {
    padding: 1rem;
    text-align: start;
    width: 100%;
    height: 100%;
}

.note-create-cta {
    position: sticky;
    bottom: 0rem;
    display: flex;
    justify-content: center;
    padding: 1rem;
    background: linear-gradient(transparent, var(--c-bg));
    backdrop-filter: blur(4px);
}

.note-option-cta {
    display: flex;
    flex-wrap: wrap;
    gap: 0.5rem;
}

.note-form {
    display: flex;
    flex-direction: column;
    margin: 1rem 0;
    gap: 1rem;
}

#n-name {
    font-weight: bolder;
    font-size: 1.5rem;
    border: none;
    border-bottom: 2px solid #22222280;
    border-radius: 0;
    padding: 0 0.5rem;
}

#n-text {
    padding: 0.5rem;
    resize: vertical;
    border: none;
    min-height: 12rem;
    field-sizing: content;
}

.print-view {
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    background-color: white;
    color: black;
    min-height: 200vh;
}

.note-share-view {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    gap: 1rem;
}

.note-share-view a,
.note-share-view a:visited {
    color: black;
    word-break: break-all;
}

.note-share-view img {
    width: 100%;
    height: 100%;
    max-width: 800px;
    max-height: 800px;
    padding: 1em;
    border: 2px solid black;
}

@media (min-aspect-ratio: 1) {
    .note-share-view img {
        width: 80vh;
        height: 80vh;
    }
}

.opensource-info {
    display: block;
    margin-top: 1rem;
}

